Updated the getVehicleRunningCosts method, expanded the vehicle list to better handle draft animals, applied new travel hours logic and finalized output of travel cost and time.

--- a/templates/item/Travel Fare-sheet.html
+++ b/templates/item/Travel Fare-sheet.html
@@ -159,6 +159,20 @@
 
                             <tr class="design-row">
                                 <td style="line-height: 27.5px">
+                                    Travelling Hours
+                                </td>
+                                <td>
+                                    <input type="number" name="data.travelFare.travellingHours" value="{{data.data.travelFare.travellingHours}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="travel-hours">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
                                     Vehicle
                                 </td>
                                 <td>
