Fixing default materials and undefined checks

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -458,7 +458,7 @@
                                     Deflection
                                 </td>
                                 <td>
-                                    {{data.data.bowDesign.deflection}} %
+                                    {{round data.data.bowDesign.deflection 100}} %
                                 </td>
                             </tr>
                         </table>
