Fixing Armour Layering

--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -409,7 +409,7 @@
                 {{else}}
                 <span class="tooltip">
                     <label>Layer:</label>
-                    <input type="number" style="width: unset;" name="data.armour.layer" value="{{data.armour.layer}}" data-dtype="Number" />
+                    <input type="number" style="width: unset;" name="data.armour.layer" value="{{data.data.armour.layer}}" data-dtype="Number" />
                     <span class="tooltiptext">
                         <div>
                             Higher layer numbers are placed above lower layer numbers.<br>
