--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -108,7 +108,7 @@
 						<tr>
 							<td class="tooltip">
 								Traits:
-								<span class="tooltiptext" style="margin-left: -130px;">
+								<span class="tooltiptext" style="margin-left: -130px; bottom:0 !important;">
 									Advantages: {{numberFormat data.data.points.advantages decimals=0}}<br>
 									Disadvantages: {{numberFormat data.data.points.disadvantages decimals=0}}<br>
 									Perks: {{numberFormat data.data.points.perks decimals=0}}<br>
