--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -98,11 +98,6 @@
                     <td class="resource-label">ST</td>
                     <td class="resource-label"></td>
                 </tr>
-<!--                    {{log system}}-->
-<!--                    {{log system.melee}}-->
-                    {{log item}}
-                    {{log item.system}}
-                    {{log item.system.melee}}
                 {{#each item.system.melee as |melee id|}}
                 <tr class="equipment-entry">
                     <td class="resource-label">{{id}}</td>
@@ -193,7 +188,7 @@
                         <td class="resource-label">Malf</td>
                         <td class="resource-label"></td>
                     </tr>
-                    {{#each system.ranged as |ranged id|}}
+                    {{#each item.system.ranged as |ranged id|}}
                     <tr class="equipment-entry">
                         <td class="resource-label">{{id}}</td>
                         <td><input type="text" name="system.ranged.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" /></td>
@@ -288,7 +283,7 @@
                         </td>
                         <td class="resource-label"></td>
                     </tr>
-                    {{#each system.affliction as |affliction id|}}
+                    {{#each item.system.affliction as |affliction id|}}
                     <tr class="equipment-entry">
                         <td><input type="text" name="system.affliction.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" /></td>
                         <td class="resource-label">{{affliction.level}}</td>
