--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -9,7 +9,7 @@
                 <div class="flexrow">
                     <label class="resource-label">Category</label>
                     <select name="system.category">
-                        {{#select system.category}}
+                        {{#select item.system.category}}
                             <option value="advantage">Advantage</option>
                             <option value="disadv">Disadvantage</option>
                             <option value="perk">Perk</option>
@@ -19,19 +19,19 @@
                 </div>
                 <div class="flexrow">
                     <label class="resource-label">Roll (If Applicable)</label>
-                    <input type="text" name="system.level" value="{{system.level}}" data-dtype="Number"/>
+                    <input type="text" name="system.level" value="{{item.system.level}}" data-dtype="Number"/>
                 </div>
                 <div class="flexrow">
                     <label class="resource-label">Points</label>
-                    <input type="text" name="system.points" value="{{system.points}}" data-dtype="Number"/>
+                    <input type="text" name="system.points" value="{{item.system.points}}" data-dtype="Number"/>
                 </div>
                 <div class="flexrow">
                     <label class="resource-label">Race / Meta Trait / Etc</label>
-                    <input type="text" name="system.subCategory" value="{{system.subCategory}}" placeholder="Leave this blank if you don't want it categorized"/>
+                    <input type="text" name="system.subCategory" value="{{item.system.subCategory}}" placeholder="Leave this blank if you don't want it categorized"/>
                 </div>
                 <div class="flexrow">
-                    <label class="resource-label">Notes</label>
-                    <input type="text" name="system.shortNotes" value="{{system.shortNotes}}"/>
+                    <label class="resource-label">Short Notes</label>
+                    <input type="text" name="system.shortNotes" value="{{item.system.shortNotes}}"/>
                 </div>
             </div>
         </div>
