Updating table headers and column labels for the actor's combat tab

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -314,6 +314,11 @@
 	margin-left: 5px;
 }
 
+.combat-tab-attack-header {
+	font-size: larger;
+	text-decoration: underline;
+}
+
 .combat-table td {
 	padding: 2px;
 }
