--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -475,8 +475,11 @@
 				</div>
 				<table class="items-list">
 					<tr class="bold">
-						<td>Item</td>
-						<td>Attack</td>
+						<th colspan="8" class="combat-tab-attack-header">Melee Attacks</th>
+					</tr>
+					<tr class="bold">
+						<td>Source</td>
+						<td>Attack Name</td>
 						<td>Skill</td>
 						<td>Parry</td>
 						<td>Block</td>
@@ -521,8 +524,11 @@
 				</table>
 				<table class="items-list">
 					<tr class="bold">
-						<td>Item</td>
-						<td>Attack</td>
+						<th colspan="11" class="combat-tab-attack-header">Ranged Attacks</th>
+					</tr>
+					<tr class="bold">
+						<td>Source</td>
+						<td>Attack Name</td>
 						<td>Skill</td>
 						<td>Acc</td>
 						<td>Damage</td>
@@ -561,8 +567,11 @@
 				</table>
 				<table class="items-list">
 					<tr class="bold">
-						<td>Affliction</td>
-						<td>Attack</td>
+						<th colspan="8" class="combat-tab-attack-header">Afflictions</th>
+					</tr>
+					<tr class="bold">
+						<td>Source</td>
+						<td>Affliction Name</td>
 						<td>Level</td>
 						<td>Damage</td>
 						<td>Resistance Roll</td>
